--- a/platform-ui/scripts/itemImport/mmcq_mapping_v2.json
+++ b/platform-ui/scripts/itemImport/mmcq_mapping_v2.json
@@ -15,49 +15,50 @@
 		"code": {"col-def": {"column" : 0}},
 		"conceptIds": {"col-def": {"column" : 1, "type": "list"}},
 		"title": {"col-def": {"column" : 2}},
-		"question": {"col-def": {"column" : 3}},
+		"description":{"col-def":{"column":3}},
+		"question": {"col-def": {"column" : 4}},
 
-		"question_image": {"col-def": {"column" : 4}},
-	    "question_audio": {"col-def": {"column" : 5}},
-    	"question_count": {"col-def": {"column" : 6, "type": "number"}},
+		"question_image": {"col-def": {"column" : 5}},
+	    "question_audio": {"col-def": {"column" : 6}},
+    	"question_count": {"col-def": {"column" : 7, "type": "number"}},
 
-    	"domain": {"col-def": {"column" : 7}},
-    	"language": {"col-def": {"column" : 8}},
+    	"domain": {"col-def": {"column" : 8}},
+    	"language": {"col-def": {"column" : 9}},
 
-		"gradeLevel": {"col-def": {"column" : 9}},
-		"qlevel": {"col-def": {"column" : 10}},
-		"keywords": {"col-def": {"column" : 11, "type": "list"}},
+		"gradeLevel": {"col-def": {"column" : 10}},
+		"qlevel": {"col-def": {"column" : 11}},
+		"keywords": {"col-def": {"column" : 12, "type": "list"}},
 
 		"media": [
 			{
-	        	"id": {"col-def": {"column" : 4, "type": "string"}},
-	        	"type": {"literal": "image"},
-	        	"asset_id": {"col-def": {"column" : 4, "type": "string"}}
-	    	},
-	    	{
 	        	"id": {"col-def": {"column" : 5, "type": "string"}},
-	        	"type": {"literal": "audio"},
+	        	"type": {"literal": "image"},
 	        	"asset_id": {"col-def": {"column" : 5, "type": "string"}}
 	    	},
 	    	{
-	        	"id": {"col-def": {"column" : 13, "type": "string"}},
-	        	"type": {"literal": "image"},
-	        	"asset_id": {"col-def": {"column" : 13, "type": "string"}}
+	        	"id": {"col-def": {"column" : 6, "type": "string"}},
+	        	"type": {"literal": "audio"},
+	        	"asset_id": {"col-def": {"column" : 6, "type": "string"}}
 	    	},
 	    	{
-	        	"id": {"col-def": {"column" : 16, "type": "string"}},
+	        	"id": {"col-def": {"column" : 14, "type": "string"}},
 	        	"type": {"literal": "image"},
-	        	"asset_id": {"col-def": {"column" : 16, "type": "string"}}
+	        	"asset_id": {"col-def": {"column" : 14, "type": "string"}}
 	    	},
 	    	{
-	        	"id": {"col-def": {"column" : 19, "type": "string"}},
+	        	"id": {"col-def": {"column" : 17, "type": "string"}},
 	        	"type": {"literal": "image"},
-	        	"asset_id": {"col-def": {"column" : 19, "type": "string"}}
+	        	"asset_id": {"col-def": {"column" : 17, "type": "string"}}
 	    	},
 	    	{
-	        	"id": {"col-def": {"column" : 22, "type": "string"}},
+	        	"id": {"col-def": {"column" : 20, "type": "string"}},
 	        	"type": {"literal": "image"},
-	        	"asset_id": {"col-def": {"column" : 22, "type": "string"}}
+	        	"asset_id": {"col-def": {"column" : 20, "type": "string"}}
+	    	},
+	    	{
+	        	"id": {"col-def": {"column" : 23, "type": "string"}},
+	        	"type": {"literal": "image"},
+	        	"asset_id": {"col-def": {"column" : 23, "type": "string"}}
 	    	}
 	    ],
 
@@ -65,44 +66,44 @@
 			{
 				"value" : {
 					"type": {"literal": "mixed"},
-					"text":  {"col-def": {"column" : 12, "type": "string"}},
-					"image":  {"col-def": {"column" : 13, "type": "string"}}
+					"text":  {"col-def": {"column" : 13, "type": "string"}},
+					"image":  {"col-def": {"column" : 14, "type": "string"}}
 				},
-				"answer": {"col-def": {"column" : 14, "type": "boolean"}}
+				"answer": {"col-def": {"column" : 15, "type": "boolean"}}
 			},
 			{
 				"value" : {
 					"type": {"literal": "mixed"},
-					"text":  {"col-def": {"column" : 15, "type": "string"}},
-					"image":  {"col-def": {"column" : 16, "type": "string"}}
+					"text":  {"col-def": {"column" : 16, "type": "string"}},
+					"image":  {"col-def": {"column" : 17, "type": "string"}}
 				},
-				"answer": {"col-def": {"column" : 17, "type": "boolean"}}
+				"answer": {"col-def": {"column" : 18, "type": "boolean"}}
 			},
 			{
 				"value" : {
 					"type": {"literal": "mixed"},
-					"text":  {"col-def": {"column" : 18, "type": "string"}},
-					"image":  {"col-def": {"column" : 19, "type": "string"}}
+					"text":  {"col-def": {"column" : 19, "type": "string"}},
+					"image":  {"col-def": {"column" : 20, "type": "string"}}
 				},
-				"answer": {"col-def": {"column" : 20, "type": "boolean"}}
+				"answer": {"col-def": {"column" : 21, "type": "boolean"}}
 			},
 			{
 				"value" : {
 					"type": {"literal": "mixed"},
-					"text":  {"col-def": {"column" : 21, "type": "string"}},
-					"image":  {"col-def": {"column" : 22, "type": "string"}}
+					"text":  {"col-def": {"column" : 22, "type": "string"}},
+					"image":  {"col-def": {"column" : 23, "type": "string"}}
 				},
-				"answer": {"col-def": {"column" : 23, "type": "boolean"}}
+				"answer": {"col-def": {"column" : 24, "type": "boolean"}}
 			}
 		],
 
-		"template": {"col-def": {"column" : 24}},
-    	"template_id": {"col-def": {"column" : 25}},
+		"template": {"col-def": {"column" : 25}},
+    	"template_id": {"col-def": {"column" : 26}},
 
 		"model": {
-			"param1": {"col-def": {"column" : 26, "type": "string"}},
-			"param2": {"col-def": {"column" : 27, "type": "string"}}
+			"param1": {"col-def": {"column" : 27, "type": "string"}},
+			"param2": {"col-def": {"column" : 28, "type": "string"}}
 		},
-		"start": 28
+		"start": 29
 	}
 }
