log stash configuration to migrate audit history data from mysql to elastic search

--- a/platform-modules/manager/src/test/resources/logstash_audit_data_migration.conf
+++ b/platform-modules/manager/src/test/resources/logstash_audit_data_migration.conf
@@ -5,14 +5,28 @@ input {
         jdbc_password => "lp5andb0x"
         jdbc_driver_library => "/home/ec2-user/mysql/mysql-connector-java-5.1.10.jar"
         jdbc_driver_class => "com.mysql.jdbc.Driver"
-        statement => "select * from AUDIT_HISTORY"
+        jdbc_paging_enabled => true
+        jdbc_page_size => 25000
+        statement => "select SMAH_PK_ID as audit_id, OBJECT_ID as objectId, OBJECT_TYPE as objectType, LOG_RECORD as logRecord, GRAPH_ID as graphId, USER_ID as userId, REQUEST_ID as requestId, OPEARATION as operation, LABEL as label, SUMMARY as summary, DATE_FORMAT(CREATED_ON,'%Y-%m-%dT%H:%i:%s') as createdOn from AUDIT_HISTORY where CREATED_ON > '2016-10-01 00:00:01' order by CREATED_ON desc"
         }
   }
+filter {
+  mutate {
+    rename => { "objectid" => "objectId" }
+    rename => { "objecttype" => "objectType" }
+    rename => { "logrecord" => "logRecord" }
+    rename => { "graphid" => "graphId" }
+    rename => { "userid" => "userId" }
+    rename => { "requestid" => "requestId" }
+    rename => { "createdon" => "createdOn" }
+  }
+}
 output{
     stdout { codec => json_lines }
     elasticsearch {
-    "hosts" => "172.31.8.5:9200"
+        "hosts" => "172.31.8.5:9200"
         "index" => "lp_audit_log"
-        "document_type" => "data"
-      }
+        "action" => "create"
+        "document_type" => "ah"
+    }
 }
