maven executable jar plugin changes added

--- a/platform-tools/spikes/graph.merger/pom.xml
+++ b/platform-tools/spikes/graph.merger/pom.xml
@@ -44,4 +44,31 @@
 		    <version>3.0.3</version>
 		</dependency>
 	</dependencies>
+	  <build>
+        <plugins>
+			<plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.4.3</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>org.ekstep.graph.util.Neo4jGraphMerge</mainClass>
+                            </transformer>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        </plugins>
+    </build>
 </project>
