--- a/platform-core/graph-engine/module/graph-dac-api/pom.xml
+++ b/platform-core/graph-engine/module/graph-dac-api/pom.xml
@@ -77,6 +77,12 @@
 			<artifactId>jcypher</artifactId>
 			<version>3.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-ha -->
 		<!-- <dependency> <groupId>org.neo4j</groupId> <artifactId>neo4j-ha</artifactId> 
 			<version>3.0.7</version> </dependency> -->
