--- a/searchIndex-platform/module/search-api/search-manager/pom.xml
+++ b/searchIndex-platform/module/search-api/search-manager/pom.xml
@@ -31,6 +31,7 @@
     <properties>
         <play2.version>2.4.6</play2.version>
         <play2.plugin.version>1.0.0-beta5</play2.plugin.version>
+        <scala.version>2.11.8</scala.version>
     </properties>
     
     <dependencies>
