--- a/platform-tools/kernel-extension/transaction-event-handler/pom.xml
+++ b/platform-tools/kernel-extension/transaction-event-handler/pom.xml
@@ -29,21 +29,6 @@
 			<version>${neo4j.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.4</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.3.2</version>
-		</dependency>
-		<dependency>
 			<groupId>org.ekstep</groupId>
 			<artifactId>searchindex-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -61,6 +46,33 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-shade-plugin</artifactId>
+	            <version>2.4.3</version>
+	            <executions>
+	                <execution>
+	                    <phase>package</phase>
+	                    <goals>
+	                        <goal>shade</goal>
+	                    </goals>
+	                    <configuration>
+	                        <artifactSet>
+				                <excludes>
+				                	<exclude>org.neo4j:*</exclude>
+				                	<exclude>org.apache.lucene:*</exclude>
+				                	<exclude>org.scala-lang:*</exclude>
+				                	<exclude>org.ow2.asm:*</exclude>
+				                	<exclude>org.parboiled:*</exclude>
+				                	<exclude>net.sf.opencsv:*</exclude>
+				                	<exclude>com.googlecode.concurrentlinkedhashmap:*</exclude>
+				                	<exclude>io.netty:*</exclude>
+				                </excludes>
+				             </artifactSet>
+	                    </configuration>
+	                </execution>
+	            </executions>
+	        </plugin>
 		</plugins>
 	</build>
 </project>
