--- a/platform-tools/kernel-extension/transaction-event-handler/pom.xml
+++ b/platform-tools/kernel-extension/transaction-event-handler/pom.xml
@@ -34,6 +34,12 @@
 			<version>1.0-SNAPSHOT</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.ilimi</groupId>
+			<artifactId>graph-dac-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<type>jar</type>
+		</dependency>
 	</dependencies>
 
 	<build>
