include kernel-extension module in platform pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>language-platform</module>
 		<module>orchestrator</module>
 		<module>platform-config</module>
+		<module>platform-tools/kernel-extension</module>
 	</modules>
 
 	<dependencies>
