--- a/searchIndex-platform/module/search-api/search-manager/conf/application.conf
+++ b/searchIndex-platform/module/search-api/search-manager/conf/application.conf
@@ -81,3 +81,10 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+# APP Specific config
+# ~~~~~
+# Application specific configurations can be provided here
+
+# Path for elasticsearch.properties file
+search.config.path=/home/learning/platform/search
