--- a/platform-core/graph-engine/module/graph-common/src/test/resources/graph.properties
+++ b/platform-core/graph-engine/module/graph-common/src/test/resources/graph.properties
@@ -3,3 +3,7 @@ redis.host=localhost
 redis.port=6379
 redis.maxConnections=128
 akka.request_timeout=30
+environment.id=10000000
+graph.passport.key.base=31b6fd1c4d64e745c867e61a45edc34a
+route.domain=bolt://localhost:7687
+route.all=bolt://localhost:7687
