--- a/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
+++ b/docs/domain_model_v2/api-docs/swagger/assessment_api/assessment_apis.yaml
@@ -10,11 +10,11 @@ info:
   license:
     name: EkStep License
     url: 'http:www.EkStep.in'
-basePath: /v1
+basePath: /v3/assessment
 host: api.ekstep.in
 securityDefinitions: {}
 schemes:
-    - https
+  - https
 consumes:
   - application/json
 produces:
@@ -25,7 +25,7 @@ tags:
   - name: ItemSet
     description: Everything related to CRUD Operations of the ItemSet
 paths:
-  /assessmentitem/search:
+  /assessmentitems/search:
     post:
       summary: Search an AssessmentItem
       description: >-
@@ -63,7 +63,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  /assessmentitem:
+  /assessmentitems/create:
     post:
       summary: Creates an AssessmentItem
       description: >-
@@ -102,7 +102,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/assessmentitem/{assessmentId}':
+  '/assessmentitems/read/{assessmentId}':
     get:
       summary: Gets an AssessmentItem
       description: >-
@@ -140,6 +140,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
+  '/assessmentitems/retire/{assessmentId}':
     delete:
       summary: Deletes an AssessmentItem
       description: This API is used to delete an assessmentItem from the EkStep Platform
@@ -173,6 +174,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
+  '/assessmentitems/update/{assessmentId}':
     patch:
       summary: Updates the given assessmentItem
       description: >-
@@ -214,7 +216,46 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  /assessmentitemset:
+  /assessmentitems/list:
+    post:
+      summary: Returns list of AssessmentItems
+      description: >-
+        This API is used to list all assessmentItem from the _EkStep
+        Platform_.This endpoint returns the assessmentItems  with default
+        fields. 
+      tags:
+        - AssessmentItem
+      operationId: assessment_Item.list
+      produces:
+        - application/json
+      parameters:
+        - name: assessmentSearchRequest
+          in: body
+          required: true
+          description: searchAssessmentRequest
+          schema:
+            $ref: '#/definitions/listAssessmentRequest'
+      responses:
+        '200':
+          description: AssessmentItems fetched Successfully
+          schema:
+            $ref: '#/definitions/listAssessmentItemResponse'
+        '400':
+          description: >-
+            Error While fetching the assessmentItems! | Error occurred while
+            operation, mostly because of the input given by client, In general
+            it is 'Client Exception'.
+          schema:
+            $ref: '#/definitions/FailedResponseHeader'
+        '500':
+          description: >-
+            Error While fetching the assessmentItems! | Error occurred while
+            operation, mostly because of erroneous condition on server, In
+            general it is 'Server Exception' or 'Exception'.
+          schema:
+            $ref: '#/definitions/FailedResponseHeader'
+      security: []
+  /itemsets/create:
     post:
       summary: Creates an ItemSet
       description: >-
@@ -252,7 +293,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/assessmentitemset/{ItemSetId}':
+  '/itemsets/read/{ItemSetId}':
     get:
       summary: Gets an ItemSet
       description: >-
@@ -290,6 +331,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
+  '/itemsets/retire//{ItemSetId}':
     delete:
       summary: Deletes an ItemSet
       description: >-
@@ -325,6 +367,7 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
+  '/itemsets/update/{ItemSetId}':
     patch:
       summary: Updates an ItemSet
       description: >-
@@ -366,12 +409,12 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  /assessmentitemset/search:
+  /itemsets/search:
     post:
       summary: Search an ItemSet
       description: >-
         This API is used to search and retrieve all ItemSets from the Item
-        repository based on the given search criteria in the request body
+        repository based on the given search creteria in the request body
       tags:
         - ItemSet
       operationId: itemSet.search
@@ -403,7 +446,44 @@ paths:
           schema:
             $ref: '#/definitions/FailedResponseHeader'
       security: []
-  '/assessmentitemset/generate/{ItemSetId}':
+  /itemsets/list:
+    post:
+      summary: Lists an ItemSet
+      description: >-
+        This API is used to list and retrieve all ItemSets from the Item
+        repository based on the given search creteria in the request body
+      tags:
+        - ItemSet
+      operationId: itemSet.list
+      produces:
+        - application/json
+      parameters:
+        - name: itemsetListRequest
+          in: body
+          required: true
+          schema:
+            $ref: '#/definitions/listItemSetRequest'
+      responses:
+        '200':
+          description: ItemSets listed Successfully
+          schema:
+            $ref: '#/definitions/ItemSetlistResponse'
+        '400':
+          description: >-
+            Error While fetching all ItemSet lists! | Error occurred while
+            operation, mostly because of the input given by client, In general
+            it is 'Client Exception'
+          schema:
+            $ref: '#/definitions/FailedResponseHeader'
+        '500':
+          description: >-
+            Error While fetching all ItemSet lists! | Error occurred while
+            operation, mostly because of erroneous condition on server, In
+            general it is 'Server Exception' or 'Exception'
+          schema:
+            $ref: '#/definitions/FailedResponseHeader'
+      security: []
+  '/itemsets/generate/{ItemSetId}':
     get:
       summary: ' Generates an ItemSet'
       description: >-
@@ -443,6 +523,25 @@ paths:
       security: []
 definitions:
   searchAssessmentRequest:
+    type: object
+    required:
+      - id
+      - params
+      - request
+      - ts
+      - ver
+    properties:
+      id:
+        type: string
+      ver:
+        type: string
+      ts:
+        type: string
+      params:
+        $ref: '#/definitions/RequestParams'
+      request:
+        $ref: '#/definitions/searchObject'
+  listAssessmentRequest:
     type: object
     required:
       - id
@@ -519,6 +618,25 @@ definitions:
       request:
         $ref: '#/definitions/updateItemSetWithMembers'
   searchItemSetRequest:
+    type: object
+    required:
+      - id
+      - params
+      - request
+      - ts
+      - ver
+    properties:
+      id:
+        type: string
+      ver:
+        type: string
+      ts:
+        type: string
+      params:
+        $ref: '#/definitions/RequestParams'
+      request:
+        $ref: '#/definitions/searchItemSetObject'
+  listItemSetRequest:
     type: object
     required:
       - id
@@ -635,6 +753,27 @@ definitions:
       result:
         $ref: '#/definitions/assessmentItemMetadata'
   searchAssessmentItemResponse:
+    title: search Response
+    properties:
+      id:
+        type: string
+        description: API Identifier
+      ver:
+        type: string
+        description: API version information
+      ts:
+        type: string
+        description: API execution timespan
+      params:
+        $ref: '#/definitions/ResponseParams'
+      responseCode:
+        type: string
+        description: API response code
+      result:
+        type: array
+        items:
+          $ref: '#/definitions/assessmentItemMetadata'
+  listAssessmentItemResponse:
     title: search Response
     properties:
       id:
@@ -789,6 +928,27 @@ definitions:
       result:
         $ref: '#/definitions/assessment_item_set'
   ItemSetSearchResponse:
+    title: Get Response
+    properties:
+      id:
+        type: string
+        description: API Identifier
+      ver:
+        type: string
+        description: API version information
+      ts:
+        type: string
+        description: API execution timespan
+      params:
+        $ref: '#/definitions/ResponseParams'
+      responseCode:
+        type: string
+        description: API response code
+      result:
+        type: array
+        items:
+          $ref: '#/definitions/assessment_item_set'
+  ItemSetlistResponse:
     title: Get Response
     properties:
       id:
