ansible for new LP setup

--- a/platform-devops/ansible/roles/createpath/tasks/main.yml
+++ b/platform-devops/ansible/roles/createpath/tasks/main.yml
@@ -8,9 +8,11 @@
      - /data/contentBundle
      - /data/properties
      - /data/properties/learning
-     - /home/ec2-user/tmp
+     - /home/{{user}}/tmp
+     - /home/learning/platform
   tags:
-       - learning
+        - learning
+        - total
 
 - name: create folder data 
   become: yes
@@ -22,56 +24,59 @@
      - /data/contentBundle
      - /data/properties
      - /data/properties/language
-     - /home/ec2-user/tmp
+     - /home/{{user}}/tmp
+     - /home/learning/platform
   tags:
        - language
-
-- name: create folder data
-  become: yes
-  file: path={{ item }} state=directory mode=0755
-  with_items:
-     - /data
-     - /data/logs
-     - /data/contentBundle
-     - /data/properties
-     - /data/properties/search
-     - /home/ec2-user/tmp
-  tags:
-       - search
-
-- name: create folder data
-  become: yes
-  file: path={{ item }} state=directory mode=0755
-  with_items:
-     - /data
-     - /data/logs
-     - /data/contentBundle
-     - /data/properties
-     - /data/properties/config
-     - /home/ec2-user/tmp
-  tags:
-       - config
-
-- name: create folder data
-  become: yes
-  file: path={{ item }} state=directory mode=0755
-  with_items:
-     - /data
-     - /data/graphDB
-     - /data/logs
-     - /data/contentBundle
-     - /data/properties
-     - /data/properties/language
-     - /data/properties/learning
-     - /data/properties/search
-     - /data/properties/config
-     - /home/ec2-user/tmp
-  tags:
        - total
 
-- name: Change ownership of data directory
+- name: create folder data
   become: yes
-  file: path=/home/ec2-user/tmp owner=ec2-user group=ec2-user  recurse=yes
+  file: path={{ item }} state=directory mode=0755
+  with_items:
+     - /data
+     - /data/logs
+     - /data/contentBundle
+     - /data/properties
+     - /data/properties/search
+     - /home/{{user}}/tmp
+     - /home/learning/platform
+     - /home/learning/platform/search
+     - /home/learning/platform/service
+     - /home/learning/platform/service/logs
+  tags:
+       - search
+       - total
+
+- name: create folder data
+  become: yes
+  file: path={{ item }} state=directory mode=0755
+  with_items:
+     - /data
+     - /data/logs
+     - /data/contentBundle
+     - /data/properties
+     - /data/properties/config
+     - /home/{{user}}/tmp
+     - /home/learning/platform
+  tags:
+       - config
+       - total
+
+
+- name: Change ownership of platform directory
+  become: yes
+  file: path=/home/{{user}}/platform owner={{user}} group={{user}}  recurse=yes
+  tags:
+       - learning
+       - language
+       - config
+       - search
+
+
+- name: Change ownership of tmp directory
+  become: yes
+  file: path=/home/{{user}}/tmp owner={{user}} group={{user}}  recurse=yes
   tags:
        - learning
        - language
@@ -80,7 +85,7 @@
 
 - name: Change ownership of data directory
   become: yes
-  file: path=/data owner=ec2-user group=ec2-user  recurse=yes
+  file: path=/data owner={{user}} group={{user}}  recurse=yes
   tags:
        - learning
        - language
