--- a/platform-devops/ansible/provision.yml
+++ b/platform-devops/ansible/provision.yml
@@ -1,13 +1,12 @@
 - hosts: "{{remote}}"
-  gather_facts: no
-  become: yes
+  remote_user: learning
   roles:
         - java
         - createpath
-        - aws-login
         - tomcat
         - ffmpeg
         - imagemagick
         - logstash
-        - mongodb
+        - search-service
         - redis
+        - mongodb       
