--- a/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
+++ b/platform-devops/ansible/roles/copy-graphdb/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: copy template of shell script to Copy graphDB
-  template: src=copy_graphdb_script.j2 dest=/home/ec2-user/copy_graphdb_script.sh owner=ec2-user group=ec2-user mode=0751
+  template: src=copy_graphdb_script.j2 dest=/home/{{user}}/copy_graphdb_script.sh owner={{user}} group={{user}} mode=0751
   
        
 - name: run script
   become: yes  
-  shell: nohup /home/ec2-user/copy_graphdb_script.sh "{{machine}}" &
+  shell: nohup /home/{{user}}/copy_graphdb_script.sh "{{machine}}" &
   tags: 
        - always
