--- a/platform-devops/ansible/roles/deployartifact/tasks/main.yml
+++ b/platform-devops/ansible/roles/deployartifact/tasks/main.yml
@@ -1,31 +1,63 @@
 ---
 #tasks file for deployartifact
-
 - name: stop tomcat
   become: yes
+  become_user: learning
   service: name=tomcat state=stopped
   tags:
-       - always
+       - learning
+       - language
+       - config
+       - total
+
+- name: Status of the search service
+  become: yes
+  become_user: learning
+  command: "{{ service_path }}/search-service status"
+  register: search_status
+  tags:
+       - search
+       - total
+  
+- name: Stop the api service
+  become: yes
+  become_user: learning
+  command: "{{ service_path }}/search-service stop"
+  when: "search_status.stdout.find('RUNNING') != -1"
+  async: 10
+  poll: 5
+  tags:
+       - search
+       - total
+  
 
 - name: copy the database.properties
+  become: yes
+  become_user: learning
   template: src=language/database.properties.j2 dest=/data/properties/language/database.properties
   tags:
        - language
        - total
 
 - name: copy the elasticsearch.properties
+  become: yes
+  become_user: learning
   template: src=language/elasticsearch.properties.j2 dest=/data/properties/language/elasticsearch.properties
   tags:
        - language
        - total
  
 - name: copy the graph.properties
+  become: yes
+  become_user: learning
   template: src=language/graph.properties.j2 dest=/data/properties/language/graph.properties
   tags:
        - language
        - total
  
 - name: copy the language-indexes.properties
+  become: yes
+  become_user: learning
   template: src=language/language-indexes.properties.j2 dest=/data/properties/language/language-indexes.properties
   tags:
        - language
@@ -33,6 +65,8 @@
  
 
 - name: copy the mongo.properties
+  become: yes
+  become_user: learning
   template: src=language/mongo.properties.j2 dest=/data/properties/language/mongo.properties
   tags:
        - language
@@ -40,6 +74,8 @@
  
 
 - name: copy hibernate cofngi file
+  become: yes
+  become_user: learning
   template: src=language/hibernate.cfg.xml.j2 dest=/data/properties/language/hibernate.cfg.xml
   tags:
        - language
@@ -47,6 +83,8 @@
  
 
 - name: copy the amazonS3Config.properties
+  become: yes
+  become_user: learning
   template: src=language/amazonS3Config.properties.j2 dest=/data/properties/language/amazonS3Config.properties
   tags:
        - language
@@ -56,6 +94,8 @@
 #------------------------------------------------------------------------------------
 
 - name: copy the consumer-config.xml
+  become: yes
+  become_user: learning
   template: src=learning/consumer-config.xml.j2 dest=/data/properties/learning/consumer-config.xml
   tags:
        - learning
@@ -63,6 +103,8 @@
  
 
 - name: copy the database.properties
+  become: yes
+  become_user: learning
   template: src=learning/database.properties.j2 dest=/data/properties/learning/database.properties
   tags:
        - learning
@@ -71,6 +113,8 @@
 
 
 - name: copy the elasticsearch.properties
+  become: yes
+  become_user: learning
   template: src=learning/elasticsearch.properties.j2 dest=/data/properties/learning/elasticsearch.properties
   tags:
        - learning
@@ -78,6 +122,8 @@
 
 
 - name: copy the graph.properties
+  become: yes
+  become_user: learning
   template: src=learning/graph.properties.j2 dest=/data/properties/learning/graph.properties
   tags:
        - learning
@@ -86,6 +132,8 @@
 
 
 - name: copy the mongo.properties
+  become: yes
+  become_user: learning
   template: src=learning/mongo.properties.j2 dest=/data/properties/learning/mongo.properties
   tags:
        - learning
@@ -94,6 +142,8 @@
 
 
 - name: copy the content.properties
+  become: yes
+  become_user: learning
   template: src=learning/content.properties.j2 dest=/data/properties/learning/content.properties
   tags:
        - learning
@@ -102,6 +152,8 @@
 
 
 - name: copy the amazonS3Config.properties
+  become: yes
+  become_user: learning
   template: src=learning/amazonS3Config.properties.j2 dest=/data/properties/learning/amazonS3Config.properties
   tags:
        - learning
@@ -109,6 +161,8 @@
 
 
 - name: copy the cassandra.properties
+  become: yes
+  become_user: learning
   template: src=learning/cassandra.properties.j2 dest=/data/properties/learning/cassandra.properties
   tags:
        - learning
@@ -118,7 +172,9 @@
 
 #------------------------------------------------------------------------------------
 - name: copy the elasticsearch.properties
-  template: src=search/elasticsearch.properties.j2 dest=/data/properties/search/elasticsearch.properties
+  become: yes
+  become_user: learning
+  template: src=search/elasticsearch.properties.j2 dest={{search_root}}/elasticsearch.properties
   tags:
        - search
        - total
@@ -127,6 +183,8 @@
 #------------------------------------------------------------------------------------
 
 - name: copy the amazonS3Config.properties
+  become: yes
+  become_user: learning
   template: src=config/amazonS3Config.properties.j2 dest=/data/properties/config/amazonS3Config.properties
   tags:
        - config
@@ -137,23 +195,26 @@
 
 - name: copy the artifacts files 
   become: yes
-  copy: src=learning-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
+  become_user: learning
+  copy: src=learning-service.war dest=/home/{{user}}/apache-tomcat-8.0.36/webapps
   tags:
        - learning
        - total
  
 
-- name: copy the artifacts files
+- name: Copy search artifact
   become: yes
-  copy: src=search-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
+  become_user: learning
+  copy: src=search-manager-1.0-SNAPSHOT-dist.zip dest={{ search_root }}
   tags:
        - search
        - total
- 
+
  
 - name: copy the artifacts files
   become: yes
-  copy: src=language-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
+  become_user: learning
+  copy: src=language-service.war dest=/home/{{user}}/apache-tomcat-8.0.36/webapps
   tags:
        - language
        - total
@@ -161,7 +222,8 @@
 
 - name: copy the artifacts file config-service.war
   become: yes
-  copy: src=config-service.war dest=/home/ec2-user/apache-tomcat-8.0.36/webapps
+  become_user: learning
+  copy: src=config-service.war dest=/home/{{user}}/apache-tomcat-8.0.36/webapps
   tags:
        - config
        - total
@@ -170,15 +232,16 @@
 #------------------------------------------------------------------------------------
 - name: remove learning-service
   become: yes
-  file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/learning-service state=absent
+  become_user: learning
+  file: name=/home/{{user}}/apache-tomcat-8.0.36/webapps/learning-service state=absent
   tags:
        - learning
        - total
  
-
 - name: remove search-service
   become: yes
-  file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/search-service state=absent
+  become_user: learning
+  file: name={{search_root}}/search-manager state=absent
   tags:
        - search
        - total
@@ -186,7 +249,8 @@
 
 - name: remove language-service
   become: yes
-  file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/language-service state=absent
+  become_user: learning
+  file: name=/home/{{user}}/apache-tomcat-8.0.36/webapps/language-service state=absent
   tags:
        - language
        - total
@@ -194,7 +258,8 @@
 
 - name: remove config-service
   become: yes
-  file: name=/home/ec2-user/apache-tomcat-8.0.36/webapps/config-service state=absent
+  become_user: learning
+  file: name=/home/{{user}}/apache-tomcat-8.0.36/webapps/config-service state=absent
   tags:
        - config
        - total
@@ -202,16 +267,50 @@
 
 - name: start tomcat
   become: yes
+  become_user: learning
   service: name=tomcat state=started
-  tags: 
-       - always
-
+  tags:
+       - learning
+       - language
+       - config
+       - total
 
 - name: wait for tomcat to start
+  become: yes
+  become_user: learning
   wait_for: port=8080
-  tags: 
-       - always
+  tags:
+       - learning
+       - language
+       - config
+       - total
        
+- name: Unarchive search artifact
+  become: yes
+  become_user: learning
+  unarchive: src={{ search_root }}/search-manager-1.0-SNAPSHOT-dist.zip dest={{ search_root }} copy=no group={{ user }} owner={{ user }} mode=755
+  tags: 
+       - search
+       - total
+
+- name: Change search artifact
+  become: yes
+  become_user: learning
+  command: mv /home/{{user}}/platform/search/search-manager-1.0-SNAPSHOT /home/{{user}}/platform/search/search-manager
+  tags: 
+       - search
+       - total
+
+
+- name: Start the search service
+  become: yes
+  become_user: learning
+  command: "{{ service_path }}/search-service start"
+  async: 20
+  poll: 5 
+  tags: 
+       - search
+       - total
 
 - name: check language-service health
   shell: curl 'http://{{ service_url }}/language-service/health' | grep '"healthy":false' | wc -l
@@ -221,12 +320,12 @@
        - total
  
 
-- name: check search-service health
-  shell: curl 'http://{{ service_url }}/search-service/health' | grep '"healthy":false' | wc -l
-  register: search_process
-  tags: 
-       - search
-       - total
+#- name: check search-service health
+#  shell: curl 'http://{{ service_url }}/search-service/health' | grep '"healthy":false' | wc -l
+#  register: search_process
+#  tags: 
+#       - search
+#       - total
  
 - name: check learning-service health
   shell: curl 'http://{{ service_url }}/learning-service/health' | grep '"healthy":false' | wc -l
@@ -272,6 +371,3 @@
        - config
        - total
  
-       
-
-
