--- a/platform-devops/ansible/roles/logstash/tasks/main.yml
+++ b/platform-devops/ansible/roles/logstash/tasks/main.yml
@@ -1,7 +1,44 @@
 ---
 # tasks file for logstash
+- name: Find out playbooks path
+  shell: pwd
+  register: playbook_path_output
+  tags: 
+       - learning
+       - language
+       - search
+       - total
+
+- debug: var=playbook_path_output.stdout
+  tags: 
+       - learning
+       - language
+       - search
+       - total
+
+- name: Find out playbooks path
+  shell: whoami
+  register: playbook_path_outputs
+  tags: 
+       - learning
+       - language
+       - search
+       - total
+
+- debug: var=playbook_path_outputs.stdout
+  tags: 
+       - learning
+       - language
+       - search
+       - total
+
+- name: add permissions
+  file: path=/home/learning mode=0755 recurse=yes owner={{user}} group={{user}}
+
 - name: Download th zip
-  get_url: url=https://download.elastic.co/logstash/logstash/logstash-all-plugins-2.3.3.tar.gz dest=/home/ec2-user/logstash-all-plugins-2.3.3.tar.gz  timeout=1000 force=no owner=ec2-user 
+  become: yes
+  become_user: learning
+  get_url: url=https://download.elastic.co/logstash/logstash/logstash-all-plugins-2.3.3.tar.gz dest=/home/{{user}}  timeout=1000 force=no owner={{user}}
   tags: 
        - learning
        - language
@@ -9,7 +46,9 @@
        - total
 
 - name: unzip 
-  unarchive: src=/home/ec2-user/logstash-all-plugins-2.3.3.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates=/home/ec2-user/logstash-2.3.3
+  become: yes
+  become_user: learning
+  unarchive: src=/home/{{user}}/logstash-all-plugins-2.3.3.tar.gz dest=/home/{{user}} copy=no group={{user}} owner={{user}} creates=/home/{{user}}/logstash-2.3.3
   tags: 
        - learning
        - language
@@ -17,7 +56,8 @@
        - total
 
 - name: set permissions
-  file: path=/home/ec2-user/logstash-2.3.3 owner=ec2-user group=ec2-user mode=0755 recurse=yes 
+  become: yes
+  file: path=/home/{{user}}/logstash-2.3.3 owner={{user}} group={{user}} mode=0755 recurse=yes 
   tags: 
        - learning
        - language
@@ -26,43 +66,52 @@
 
 #****************************ADD EVENTS********************************************
 - name: add logstash configuration files for learning and language
+  become: yes
+  become_user: learning
   template: src={{ item.name }}  dest={{ item.destination }}
   with_items:
-    - { name: 'logstash-graph-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf' }
-    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+    - { name: 'logstash-word-events.j2', destination: '/home/learning/logstash-2.3.3/logstash-word-events.conf' }
   tags:
        - learning 
        - language 
 
 - name: add logstash configuration files for search
+  become: yes
+  become_user: learning
   template: src={{ item.name }}  dest={{ item.destination }}
   with_items:
-    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+    - { name: 'logstash-word-events.j2', destination: '/home/learning/logstash-2.3.3/logstash-word-events.conf' }
   tags:
        - search 
 
 - name: add logstash configuration files for all
+  become: yes
+  become_user: learning
   template: src={{ item.name }}  dest={{ item.destination }}
   with_items:
-    - { name: 'logstash-graph-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-graph-events.conf' }
-    - { name: 'logstash-word-events.j2', destination: '/home/ec2-user/logstash-2.3.3/logstash-word-events.conf' }
+    - { name: 'logstash-word-events.j2', destination: '/home/learning/logstash-2.3.3/logstash-word-events.conf' }
   tags:
        - total 
 #******************************************Check the process is running or not*****************************************************
 - name: copy template of shell script to stop service
-  copy: src=stop_logstash_script1.sh dest=/home/ec2-user/stop_logstash_script1.sh
+  become: yes
+  become_user: learning
+  copy: src=stop_logstash_script1.sh dest=/home/{{user}}/stop_logstash_script1.sh
   tags: 
        - learning
        - language
 
 - name: copy template of shell script to stop service
-  copy: src=stop_logstash_script2.sh dest=/home/ec2-user/stop_logstash_script2.sh
+  become: yes
+  become_user: learning
+  copy: src=stop_logstash_script2.sh dest=/home/{{user}}/stop_logstash_script2.sh
   tags:
        - search
        - total
 
 - name: run script
   become: yes
+  become_user: learning
   shell: sh {{ user_home }}/stop_logstash_script1.sh
   tags: 
        - learning
@@ -71,22 +120,15 @@
 
 - name: run script
   become: yes
+  become_user: learning
   shell: sh {{ user_home }}/stop_logstash_script2.sh
   tags: 
        - search
        - total
   
-- name: Check if logstash graph events is running
-  become_user: ec2-user
-  shell: ps -ef | grep logstash | grep logstash-graph-events.conf | grep -v grep | wc -l
-  register: logstash_process
-  tags: 
-       - learning
-       - language
-       - total
-
 - name: Check if logstash for word events is running
-  become_user: ec2-user
+  become: yes
+  become_user: learning
   shell: ps -ef | grep logstash | grep logstash-word-events.conf | grep -v grep | wc -l
   register: word_events_process
   tags: 
@@ -96,23 +138,10 @@
        - total
   
 #******************************************Run the process if not running*****************************************************
-- name: Run logstash graph-events
-  become_user: ec2-user
-  become: yes
-  shell: /home/ec2-user/logstash-2.3.3/bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-graph-events.conf -v &
-  async: 60
-  poll: 30
-  when: "logstash_process.stdout == '0'"
-  tags: 
-       - learning
-       - language
-       - total
-
-
 - name: Run logstash for word events
-  become_user: ec2-user
   become: yes
-  shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-word-events.conf -v &
+  become_user: learning
+  shell: chdir=/home/{{user}}/logstash-2.3.3  bin/logstash -f /home/{{user}}/logstash-2.3.3/logstash-word-events.conf -v &
   async: 60
   poll: 30
   when: "word_events_process.stdout == '0'"
