--- a/platform-devops/ansible/roles/redis/tasks/main.yml
+++ b/platform-devops/ansible/roles/redis/tasks/main.yml
@@ -1,60 +1,63 @@
 ---
 # tasks file for redis
-
-- name: install softwares build-essential
-  become: yes
-  yum: name="@Development tools" state=present 
-  tags:
-       - redis
-
-
 - name: download redis zipfile
-  become_user: ec2-user
   become: yes
-  get_url: url=http://download.redis.io/releases/redis-stable.tar.gz dest=/home/ec2-user/redis-stable.tar.gz timeout=50 force=no owner=ec2-user
+  become_user: learning
+  get_url: url=http://download.redis.io/releases/redis-stable.tar.gz dest=/home/{{user}}/redis-stable.tar.gz timeout=50 force=no owner={{user}}
   tags:
        - redis
 
 
 - name: unzip 
-  unarchive: src=/home/ec2-user/redis-stable.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ redis_home }}
+  become: yes
+  become_user: learning
+  unarchive: src=/home/{{user}}/redis-stable.tar.gz dest=/home/{{user}} copy=no group={{user}} owner={{user}} creates={{ redis_home }}
   tags:
        - redis
 
 
 
 - name: Change ownership of redis installation
-  file: path={{ redis_home }} owner=ec2-user group=ec2-user state=directory recurse=yes
+  become: yes
+  file: path={{ redis_home }} owner={{user}} group={{user}} state=directory recurse=yes
   tags:
        - redis
 
 
 - name: redis conf
-  template: src=redis.conf.j2 dest=/home/ec2-user/redis-stable/redis.conf
+  become: yes
+  template: src=redis.conf.j2 dest=/home/{{user}}/redis-stable/redis.conf
   tags:
        - redis
 
 
 - name: Go to the folder and run make
+  become: yes
+  become_user: learning
   command: chdir={{ redis_home }} make
   tags:
        - redis
 
 - name: copy template
+  become: yes
+  become_user: learning
   template: src=stop_script.j2 dest={{ user_home }}/stop_script.sh
   tags:
        - redis
 
 - name: run script
+  become: yes
+  become_user: learning
   shell: sh {{ user_home }}/stop_script.sh
   tags: 
        - redis
 
 - name: start redis
-  become_user: ec2-user
+  become: yes
+  become_user: learning
   shell: nohup src/redis-server --protected-mode no &
   args:
-    chdir: /home/ec2-user/redis-stable/
+    chdir: /home/{{user}}/redis-stable/
   async: 60
   poll: 60
   tags:
