--- a/platform-devops/ansible/roles/startservice/tasks/main.yml
+++ b/platform-devops/ansible/roles/startservice/tasks/main.yml
@@ -21,42 +21,41 @@
 
 
 - name: start redis
-  become_user: ec2-user
+  become_user: {{user}}
   shell: nohup src/redis-server &
   args:
-    chdir: /home/ec2-user/redis-stable/
+    chdir: /home/{{user}}/redis-stable/
   async: 60
   poll: 60
   when: "redis_process.stdout == '0'"
 
 - name: Check if logstash graph events is running
-  become_user: ec2-user
+  become_user: {{user}}
   shell: ps -ef | grep logstash | grep logstash-graph-events.conf | grep -v grep | wc -l
   register: logstash_process
 
 - name: Check if logstash for word events is running
-  become_user: ec2-user
+  become_user: {{user}}
   shell: ps -ef | grep logstash | grep logstash-word-events.conf | grep -v grep | wc -l
   register: word_events_process
 
 
 - name: Run logstash
-  become_user: ec2-user
+  become_user: {{user}}
   become: yes
-  shell: /home/ec2-user/logstash-2.3.3/bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-graph-events.conf -v &
+  shell: /home/{{user}}/logstash-2.3.3/bin/logstash -f /home/{{user}}/logstash-2.3.3/logstash-graph-events.conf -v &
   async: 60
   poll: 30
   when: "logstash_process.stdout == '0'"
 
 
 - name: Run logstash for word events
-  become_user: ec2-user
+  become_user: {{user}}
   become: yes
-  shell: chdir=/home/ec2-user/logstash-2.3.3  bin/logstash -f /home/ec2-user/logstash-2.3.3/logstash-word-events.conf -v &
+  shell: chdir=/home/{{user}}/logstash-2.3.3  bin/logstash -f /home/{{user}}/logstash-2.3.3/logstash-word-events.conf -v &
   async: 60
   poll: 30
   when: "word_events_process.stdout == '0'"
 
 - name: start tomcat
-  become: yes
   service: name=tomcat state=started
