--- a/platform-devops/ansible/roles/tomcat/tasks/main.yml
+++ b/platform-devops/ansible/roles/tomcat/tasks/main.yml
@@ -1,87 +1,96 @@
 ---
 - name: Download Tomcat
-  get_url: url=http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user/ timeout=1000 force=no owner=ec2-user group=ec2-user
+  become: yes
+  become_user: learning
+  get_url: url=http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.36/bin/apache-tomcat-8.0.36.tar.gz dest=/home/{{user}}/ timeout=1000 force=no owner={{user}} group={{user}}
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
 - name: Extract archive
-  unarchive: src=apache-tomcat-8.0.36.tar.gz dest=/home/ec2-user copy=no group=ec2-user owner=ec2-user creates={{ tomcat_home }}
+  become: yes
+  become_user: learning
+  unarchive: src=/home/{{user}}/apache-tomcat-8.0.36.tar.gz dest=/home/{{user}} copy=no group={{user}} owner={{user}} creates={{ tomcat_home }}
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
 - name: Symlink install directory
+  become: yes
   file: src={{ tomcat_home }} path=/usr/share/tomcat state=link
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
 - name: Change ownership of Tomcat installation
-  file: path=/usr/share/tomcat/ owner=ec2-user group=ec2-user state=directory recurse=yes
+  become: yes
+  become_user: learning
+  file: path=/usr/share/tomcat/ owner={{user}} group={{user}} state=directory recurse=yes
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
 - name: create Catalina
+  become: yes
+  become_user: learning
   file: path={{ tomcat_home }}/conf/Catalina state=directory mode=755 
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
 - name: create localhost
+  become: yes
+  become_user: learning
   file: path={{ tomcat_home }}/conf/Catalina/localhost state=directory mode=755 
   tags:
        - learning
        - language
        - config
-       - search
-
+      
 - name: set permission
-  file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
+  become: yes
+  become_user: learning
+  file: path={{ tomcat_home }}  mode=0755 owner={{user}} group={{user}} recurse=yes
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
 - name: add templates for learning& language
+  become: yes
+  become_user: learning
   template: src={{ item.name }} dest={{ item.destination }}
   with_items:
     - { name: 'server.xml', destination: '/usr/share/tomcat/conf/' }
-    - { name: 'iptables-save', destination: '/etc/sysconfig/iptables' }
     - { name: 'catalina.j2', destination: '{{ tomcat_home }}/bin/catalina.sh' }
   tags:
        - learning
        - language
 
-- name: add templates for  search & config
+- name: add templates for  config
+  become: yes
+  become_user: learning
   template: src={{ item.name }} dest={{ item.destination }}
   with_items:
     - { name: 'server.xml', destination: '/usr/share/tomcat/conf/' }
-    - { name: 'iptables-save', destination: '/etc/sysconfig/iptables' }
     - { name: 'searchcatalina.j2', destination: '{{ tomcat_home }}/bin/catalina.sh' }
   tags:
        - config
-       - search
        
 - name: add templates language-service.xml
+  become: yes
+  become_user: learning
   template: src={{ item.name }} dest={{ item.destination }}
   with_items:  
     - { name: 'language-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
@@ -90,6 +99,8 @@
        - total
 
 - name: add templates learning-service.xml
+  become: yes
+  become_user: learning
   template: src={{ item.name }} dest={{ item.destination }}
   with_items:  
     - { name: 'learning-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
@@ -97,15 +108,9 @@
        - learning
        - total
 
-- name: add templates search-service.xml
-  template: src={{ item.name }} dest={{ item.destination }}
-  with_items:  
-    - { name: 'search-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
-  tags:
-       - search
-       - total
-
 - name: add templates
+  become: yes
+  become_user: learning
   template: src={{ item.name }} dest={{ item.destination }}
   with_items:  
     - { name: 'config-service.xml', destination: '{{ tomcat_home }}/conf/Catalina/localhost' }
@@ -114,23 +119,19 @@
        - total
 
 - name: Install Tomcat init script
+  become: yes
   copy: src=tomcat-initscript.sh dest=/etc/init.d/tomcat mode=755
   tags:
        - learning
        - language
        - config
-       - search
        - total
 
-
 - name: set permission
-  file: path={{ tomcat_home }}  mode=0755 owner=ec2-user group=ec2-user recurse=yes
+  become: yes
+  file: path={{ tomcat_home }}  mode=0755 owner={{user}} group={{user}} recurse=yes
   tags:
        - learning
        - language
        - config
-       - search
        - total
-
-
-
