Added AWS-Login role to ansible scripts contributes:Learning-Platform:#662

--- a/platform-devops/ansible/provision.yml
+++ b/platform-devops/ansible/provision.yml
@@ -1,6 +1,7 @@
 - hosts: "{{remote}}"
   remote_user: learning
   roles:
+        - aws-login
         - java
         - createpath
         - tomcat
