--- a/platform-tools/kernel-extension/pom.xml
+++ b/platform-tools/kernel-extension/pom.xml
@@ -13,6 +13,7 @@
 		<module>transaction-event-handler</module>
 		<module>learning-graph-extension</module>
 		<module>language-graph-extension</module>
+		<module>custom-procedures</module>
 	</modules>
 
 	<dependencies>
