--- a/platform-devops/ansible/neo4j-restore.yml
+++ b/platform-devops/ansible/neo4j-restore.yml
@@ -1,18 +1,4 @@
 - hosts: {{remote}}
   remote_user: learning
-  tasks: 
-        - name: Check if neo4j is running
-          become_user: learning
-          shell: ps -ef | grep "{{ neo4j_home }}"  | grep -v grep | wc -l
-          register: neo4j_process
-          
-        - name: Start the neo4j
-          become: yes
-          become_user: learning
-          shell: "{{ neo4j_home }}/bin/neo4j stop"
-          when: "neo4j_process.stdout != '0'"
-               
-
-        - name: Runt the command
-          command: chdir={{neo4j_home}} bin/neo4j-admin restore --from=/mnt/backup/neo4j-backup --database=graph.db --force
- 
+  roles:
+        - neo4j-restore
